crates/tui/tests/snapshots/explorer__icons_120x30_light_tokens.snap
---
source: crates/tui/tests/explorer.rs
expression: "token_map(&mut h, &th)"
---
tokens: t text, d dim, m muted, A accent, o on_accent, C cursor, W cursor_text, S sel,
M mark, B cmdbar, P panel, K key_bg, Y key_text, F field, U button, E selection, r track,
s success, w warn, e error, k file kind, + a tint, . none

text colour
AAAAAAttttttttddd.ddd.......................................................................ddddddddddddddddddddAAAAAAAA
.mmm.mmm.ttt.ttt..ddddddmmmddddddddmmmtttt...................................................ddddddddddddddddd..mmmmmmm.
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
.ooooooooo.m.ttttt..tttttt..ttttttt..tttttttt..tttttttttt..tttttttt.m.tttttttt..tttttttt.m.mmmmmm.....................tt
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
Adddttttttttttttttttttttttttm.....AAAAA.........AAAAA.........AAAAA.........AAAAA.........AAAAA.....AAAAkkkkk...........
............................m.....AAAAA.........AAAAA.........AAAAA.........AAAAA.........AAAAA.........kkkkk...........
mmmmmmm.....................m.....AAAAA.........AAAAA.........AAAAA.........AAAAA.........AAAAA.........kkkkk...........
Adddtttttttttttttttttttttmmmm.AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtttttttttttttt......
Adddtttttttttttttttttttttmmmm...........................................................................................
Adddtttttttttttttttttttttmmmm.AAAAkkkkk.....AAAAkkkkk.........kkkkk.........kkkkk.........kkkkk.........kkkkk...........
Adddtttttttttttttttttttttmmmm.....kkkkk.........kkkkk.........kkkkk.........kkkkk.........kkkkk.........kkkkk...........
Adddtttttttttttttttttttttmmmm.....kkkkk.........kkkkk.........kkkkk.........kkkkk.........kkkkk.........kkkkk...........
Adddtttttttttttttttttttttmmmm.tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt......
............................m...........................................................................................
mmmmmmmm....................m.....kkkkk.....ooookkkkkooooo....kkkkk.........kkkkk.........kkkkk.........kkkkk...........
Adddttttttttttttttttttttttttm.....kkkkk.....ooookkkkkooooo....kkkkk.........kkkkk.........kkkkk.........kkkkk...........
A...AAAAAAAAAmmmmmm.ddddddd.m.....kkkkk.....ooookkkkkooooo....kkkkk.........kkkkk.........kkkkk.........kkkkk...........
Adddttttttttttttttttttttttttm.ttttttttttttttooooooooooooootttttttttttttttttttttttttttttttttttttttttttttttttttttttt......
A...AAAAAAmmmmmmmmm.ddddddd.m...........................................................................................
Adddttttttttttttttttttttttttm.....kkkkk.................................................................................
A...AAAAAAmmmmmmmmm.ddddddd.m.....kkkkk.................................................................................
............................m.....kkkkk.................................................................................
............................m.tttttttttttttt............................................................................
............................m...........................................................................................
............................m...........................................................................................
.ttttttttmmmmmAAAAAAAAAAAAAAAAAAAAAAmmmmmkkkkkkkkkkkkkkkkkkkkkkkk.........................ddddddddddddAAAAAAmmmm.dddAAA.
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
..ttttttttddddd....ttttttttdddd....tttttdddddd....tttttttttttddddddd....tttddddddddddd....tttttttddddddddd..............
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP

background
MMMMMMEEEEEEEEEEEMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
MMMMMMMMMUUUMUUUMFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFMFFFFFFFFFFFFFFFFFFFFFFFFFFM
........................................................................................................................
BAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
........................................................................................................................
....................................................................................................SSSSSSSSSSSSSS......
....................................................................................................SSSSSSSSSSSSSS......
....................................................................................................SSSSSSSSSSSSSS......
....................................................................................................SSSSSSSSSSSSSS......
........................................................................................................................
..............................SSSSSSSSSSSSSSSSSSSSSSSSSSSS..............................................................
..............................SSSSSSSSSSSSSSSSSSSSSSSSSSSS..............................................................
..............................SSSSSSSSSSSSSSSSSSSSSSSSSSSS..............................................................
..............................SSSSSSSSSSSSSSSSSSSSSSSSSSSS..............................................................
........................................................................................................................
............................................AAAAAAAAAAAAAA..............................................................
............................................AAAAAAAAAAAAAA..............................................................
............................................AAAAAAAAAAAAAA..............................................................
............................................AAAAAAAAAAAAAA..............................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMEEEM
........................................................................................................................
PPKKKKKKKKPPPPPPPPPKKKKKKKKPPPPPPPPKKKKKPPPPPPPPPPKKKKKKKKKKKPPPPPPPPPPPKKKPPPPPPPPPPPPPPPKKKKKKKPPPPPPPPPPPPPPPPPPPPPPP
........................................................................................................................
