crates/tui/tests/snapshots/explorer__two_tabs_120x30_tokens.snap
---
source: crates/tui/tests/explorer.rs
expression: "token_map(&mut h, &th)"
---
tokens: t text, d dim, m muted, A accent, o on_accent, C cursor, W cursor_text, S sel,
M mark, B cmdbar, P panel, K key_bg, Y key_text, F field, U button, E selection, r track,
s success, w warn, e error, k file kind, + a tint, . none

text colour
AAAAAAddddddddmmm.ttttttttddd.ddd...........................................................ddddddddddddddddddddAAAAAAAA
.ttt.mmm.ttt.ttt..ddddddmmmddddddddmmmddddmmmtttt............................................ddddddddddddddddd..mmmmmmm.
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
.ooooooooo.m.mmmmm..mmmmmm..mmmmmmm..mmmmmmmm..mmmmmmmmmm..mmmmmmmm.m.tttttttt..tttttttt.m.mmmmmm.....................tt
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
Adddttttttttttttttttttttttttmmmm..AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................m...........................................................................................
mmmmmmm.....................m...........................................................................................
Adddtttttttttttttttttttttmmmm...........................................................................................
Adddtttttttttttttttttttttmmmm...........................................................................................
Adddtttttttttttttttttttttmmmm...........................................................................................
Adddtttttttttttttttttttttmmmm...................................dddddddddddddddddddd....................................
Adddtttttttttttttttttttttmmmm...........................................................................................
Adddtttttttttttttttttttttmmmm...........................................................................................
............................m...........................................................................................
mmmmmmmm....................m...........................................................................................
Adddttttttttttttttttttttttttm...........................................................................................
A...AAAAAAAAAmmmmmm.ddddddd.m...........................................................................................
Adddttttttttttttttttttttttttm...........................................................................................
A...AAAAAAmmmmmmmmm.ddddddd.m...........................................................................................
Adddttttttttttttttttttttttttm...........................................................................................
A...AAAAAAmmmmmmmmm.ddddddd.m...........................................................................................
............................m...........................................................................................
............................m...........................................................................................
............................m...........................................................................................
............................m...........................................................................................
.ttttttt..................................................................................ddddddddddddAAAAAAmmmm.AAAddd.
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
..YYYYYYYddddd....YYYYYYYddddddd....YYYYYYYYddddd....YYYYYYYYdddddd....YYYYYdddddd....YYYYddddddd....YYYYYYYYddddd......
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP

background
MMMMMMMMMMMMMMMMMMEEEEEEEEEEEMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
MUUUMMMMMUUUMUUUMFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFMFFFFFFFFFFFFFFFFFFFFFFFFFFM
........................................................................................................................
BAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
........................................................................................................................
.............................FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMEEEMMMM
........................................................................................................................
PPKKKKKKKPPPPPPPPPKKKKKKKPPPPPPPPPPPKKKKKKKKPPPPPPPPPKKKKKKKKPPPPPPPPPPKKKKKPPPPPPPPPPKKKKPPPPPPPPPPPKKKKKKKKPPPPPPPPPPP
........................................................................................................................
